k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: house-price-api
  labels:
    app: house-price-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: house-price-api
  template:
    metadata:
      labels:
        app: house-price-api
    spec:
      containers:
      - name: house-price-api
        image: house-price-api:latest
        imagePullPolicy: IfNotPresent  # Utilisation de IfNotPresent
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 30
