k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: house-price-service
spec:
  type: LoadBalancer
  selector:
    app: house-price-api
  ports:
  - protocol: TCP
    port: 80         # Le port que les utilisateurs utiliseront
    targetPort: 5000  # Le port sur le conteneur
