k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: house-price-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "house-price.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: house-price-service
            port:
              number: 80
